﻿Changelog:


1.266
Kodi Remote: 196
If Fanart entry empty will use Thumb issue for Fanart as well. (Looks better than default or none on my testing)
(Helps with spotify which doesn't send fanart info)


1.265
Changes for Music NowPlaying Screen
Add Slider for ALL Size - this changes the entire size of everything within FrontView

1.262
Add resizing to music screen

1.261
Fix for Splashscreen resizing (if DPI above 1)
Update to latest version SQL.Lite.System.dll and NewtonsoftJson.dlls


1.260
Changes for Windows 8.1/10 DPI Scaling
Frontview becomes DPI aware and should rescale and position appropriately


1.260
Changes for Windows 8.1/10 DPI Scaling
Frontview becomes DPI aware and should rescale and position appropriately


1.240
Add ability to send Socket Commands (using existing Frontview server - but must be enabled)
Separate Console App can send commands ON/OFF
FrontViewConsoleCommand.exe 5000 ON c:\path\to\the\photos
Format - Port being used for FrontView Server (Default 5000), On or Off, and the local path to background wish to display
& 
FrontviewConsoleCommand.exe 5000 OFF
to return to normal Fanart Display.


1.236
Plex Remote updates/fixes
Fix Movie Title overlap/resizes correctly (if not using logos)
Check filename for S00E01 type data - if present - change type to TvShow/Fill correct show/episode data and edit title


1.233
Fix for Fanart Server thread - occasionally would show wrong fanart (when received blank replies)

1.232
Fix Kodi Krypton MovieIcon remote issue
Add UDP fanart server error catch
Kodi 16/17 Remote - MovieIcons more compatible with non-english language (uses system language as default)

1.231
Add ability to use local %appdata% FrontView sources.xml in preference to kodi directory one.
To use fanart copy kodi sources.xml to %appdata%/FrontView+

1.230
Change to UDP Fanart Client/Server
(better for slightly dicey connections; wifi Tablets etc)
Updates Kodi Frontview.Service addon to v2 UDP
