@@ -35,6 +35,6 @@ using System.Resources;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("2.0.196.0")]
-[assembly: AssemblyFileVersion("2.0.196.0")]
+[assembly: AssemblyVersion("2.0.199.0")]
+[assembly: AssemblyFileVersion("2.0.199.0")]
 [assembly: NeutralResourcesLanguageAttribute("en")]
